workloads/podinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    tenant: podinfo
